# libgpkg

./: .hgignore  .hgtags  .travis.yml  Android.mk  CMakeLists.txt  ChangeLog  Doxyfile.in  Makefile.am  NOTICE  README.md  appveyor.yml  astylerc  configure.ac  coveralls  coveralls.rb  version.txt
common/: CMakeLists.txt  Makefile.am  alloc.h  allocator.h  binstream.c  binstream.h  config.h.in  constants.h  error.c  error.h  geomio.c  geomio.h  gpb.c  gpb.h  gpkg.c  gpkg.h  sql.c  sql.h  sqlite.h  str.h  strbuf.c  strbuf.h  string.h  tables.c  tables.h  wkb.c  wkb.h  wkt.c  wkt.h
extension/: CMakeLists.txt  Makefile.am  gpkg_ext.c  gpkg_ext.sym
gpkg/: CMakeLists.txt  atomic_ops.h  binstream.c  binstream.h  blobio.c  blobio.h  boost_geom_func.cpp  boost_geom_io.cpp  boost_geom_io.hpp  boost_geom_wrapper.cpp  boost_geom_wrapper.hpp  boost_geometries.hpp  check.c  check.h  config.h.in  debug.h  dynlib.h  error.c  error.h  ext.c  fp.c  fp.h  geom_func.h  geom_func_geos.c  geom_func_null.c  geom_geos.c  geomio.c  geomio.h  geos.h  geos_context.c  geos_context.h  geos_geom_func.c  geos_geom_io.c  geos_geom_io.h  gpb.c  gpb.h  gpkg.c  gpkg.h  gpkg.sym  gpkg_check.c  (+26 more)
gpkg/cmake/: FindGEOS.cmake  UseLocale.cmake  UseTLS.cmake
m4/: ax_readline.m4
shell/: CMakeLists.txt  Makefile.am  config.h.in  shell.c
shell/cmake/: FindReadline.cmake
sqlite/: CMakeLists.txt  Makefile.am  config.h.in
test/: CMakeLists.txt  Gemfile  addgeometrycolumn_spec.rb  coorddim_spec.rb  geom_func_spec.rb  geos_spec.rb  gpkg.rb  initgpkg_spec.rb  is3d_spec.rb  isassignable_spec.rb  isempty_spec.rb  ismeasured_spec.rb  minmax_spec.rb  minx.sql  rtree_spec.rb  runscript.c  sqlite.rb  srid_spec.rb  testsanity.c  testwkb.c  unittest.c  unittest.h  util.c  util.h  wkb_spec.rb  wkbwkt_spec.rb
test/cutest/: CuTest.h
tests/: Makefile.am  check_gpkg.c
